# prodePredictor

./: .gitignore  README.md  confed_check.py  download_data.py  explore.py  features.py  model.py  predict.py  predict_prode.py  predictions_2026.csv  pyproject.toml  requirements.txt  residual_check.py  tier_check.py  tune.py  tune_confirm.py  validate.py  validate_ci.py
analysis/: confed_check.py  explore.py  residual_check.py  tier_check.py  tune.py  tune_confirm.py  validate.py  validate_ci.py
data/: wc2026.csv
docs/: exploration_report.md  plan.md
predictions/: predictions_2y5.csv  predictions_4tos_close.csv  predictions_4tos_v1.csv  predictions_8vos_close.csv  predictions_8vos_v1.csv  predictions_final_close.csv  predictions_final_v1.csv  predictions_grupos_5y3.csv  predictions_prode.csv  predictions_r32_5y3.csv  predictions_r32_close.csv  predictions_r32_tmp.csv  predictions_r32_v1.csv  predictions_semis_close.csv  predictions_semis_v1.csv
scripts/: download_data.py  predict.py  predict_prode.py
src/prode/: __init__.py  confederations.py  features.py  model.py
